@@ -411,7 +411,7 @@
       <Unit28>
         <Filename Value="changelog.txt"/>
         <IsVisibleTab Value="True"/>
-        <CursorPos X="32" Y="36"/>
+        <CursorPos X="40" Y="38"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -500,8 +500,8 @@
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="11"/>
-        <TopLine Value="7494"/>
-        <CursorPos X="17" Y="7519"/>
+        <TopLine Value="7570"/>
+        <CursorPos X="39" Y="7595"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -535,13 +535,12 @@
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="6"/>
-        <TopLine Value="14112"/>
-        <CursorPos X="76" Y="14129"/>
+        <TopLine Value="826"/>
+        <CursorPos X="13" Y="837"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <IsVisibleTab Value="True"/>
           <EditorIndex Value="-1"/>
-          <WindowIndex Value="1"/>
+          <WindowIndex Value="-1"/>
           <TopLine Value="7266"/>
           <CursorPos X="55" Y="7291"/>
         </ExtraEditor1>
@@ -953,7 +952,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="40" Y="32"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit87>
       <Unit88>
@@ -969,7 +968,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit89>
       <Unit90>
@@ -979,7 +978,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit90>
       <Unit91>
@@ -989,7 +988,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit91>
       <Unit92>
@@ -999,7 +998,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit92>
       <Unit93>
@@ -1008,7 +1007,7 @@
         <EditorIndex Value="2"/>
         <TopLine Value="43"/>
         <CursorPos X="3" Y="43"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit93>
@@ -1018,7 +1017,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="492"/>
         <CursorPos Y="518"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit94>
       <Unit95>
@@ -1028,7 +1027,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit95>
       <Unit96>
@@ -1046,7 +1045,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="90"/>
+        <UsageCount Value="91"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit97>
       <Unit98>
@@ -1056,7 +1055,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="80"/>
+        <UsageCount Value="81"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit98>
       <Unit99>
@@ -1083,124 +1082,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="7527" Column="3" TopLine="7494"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="9855" Column="35" TopLine="7374"/>
       </Position1>
       <Position2>
         <Filename Value="osparser.pas"/>
-        <Caret Line="7232" Column="47" TopLine="7242"/>
+        <Caret Line="6752" Column="5" TopLine="6736"/>
       </Position2>
       <Position3>
         <Filename Value="osparser.pas"/>
-        <Caret Line="7279" Column="35" TopLine="7253"/>
+        <Caret Line="7232" Column="47" TopLine="7223"/>
       </Position3>
       <Position4>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6772" Column="20" TopLine="6747"/>
+        <Filename Value="osfuncwin.pas"/>
+        <Caret Line="116" Column="33" TopLine="116"/>
       </Position4>
       <Position5>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="362" Column="14" TopLine="337"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="8370" Column="33" TopLine="8348"/>
       </Position5>
       <Position6>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="7526" Column="5" TopLine="7495"/>
+        <Filename Value="osfuncwin.pas"/>
+        <Caret Line="181" Column="16" TopLine="156"/>
       </Position6>
       <Position7>
         <Filename Value="osparser.pas"/>
-        <Caret Line="7289" Column="14" TopLine="7264"/>
+        <Caret Line="8618" Column="96" TopLine="8599"/>
       </Position7>
       <Position8>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1750" Column="73" TopLine="1725"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="19119" Column="28" TopLine="19095"/>
       </Position8>
       <Position9>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14161" Column="22" TopLine="14180"/>
+        <Caret Line="14068" Column="29" TopLine="14050"/>
       </Position9>
       <Position10>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="871" Column="45" TopLine="848"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="14136" Column="13" TopLine="14095"/>
       </Position10>
       <Position11>
-        <Filename Value="osfunc.pas"/>
-        <Caret Line="7656" Column="27" TopLine="7643"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="14129" Column="76" TopLine="14112"/>
       </Position11>
       <Position12>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="19092" Column="26" TopLine="19065"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="7519" Column="17" TopLine="7494"/>
       </Position12>
       <Position13>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="7232" Column="47" TopLine="7236"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="372" Column="14" TopLine="348"/>
       </Position13>
       <Position14>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="19090" Column="11" TopLine="19065"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="4481" Column="14" TopLine="4455"/>
       </Position14>
       <Position15>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="7471" Column="65" TopLine="7451"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="7592" Column="26" TopLine="7566"/>
       </Position15>
       <Position16>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="8274" Column="45" TopLine="8263"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="372" Column="14" TopLine="348"/>
       </Position16>
       <Position17>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="7289" Column="44" TopLine="7262"/>
+        <Filename Value="osfunc.pas"/>
+        <Caret Line="4481" Column="14" TopLine="4455"/>
       </Position17>
       <Position18>
         <Filename Value="osparser.pas"/>
-        <Caret Line="9855" Column="35" TopLine="7374"/>
+        <Caret Line="19106" Column="4" TopLine="19057"/>
       </Position18>
       <Position19>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6752" Column="5" TopLine="6736"/>
+        <Caret Line="7138" Column="27" TopLine="7132"/>
       </Position19>
       <Position20>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8262" Column="25" TopLine="8266"/>
+        <Caret Line="833" Column="10" TopLine="817"/>
       </Position20>
       <Position21>
         <Filename Value="osparser.pas"/>
-        <Caret Line="7232" Column="47" TopLine="7223"/>
+        <Caret Line="7144" Column="17" TopLine="7111"/>
       </Position21>
       <Position22>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14111" Column="18" TopLine="14195"/>
+        <Caret Line="7032" Column="26" TopLine="7007"/>
       </Position22>
       <Position23>
-        <Filename Value="osfuncwin.pas"/>
-        <Caret Line="116" Column="33" TopLine="116"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="6748" Column="3" TopLine="6723"/>
       </Position23>
       <Position24>
-        <Filename Value="osfuncwin.pas"/>
-        <Caret Line="102" Column="10" TopLine="187"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7019" Column="27" TopLine="7008"/>
       </Position24>
       <Position25>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8370" Column="33" TopLine="8348"/>
+        <Caret Line="914" Column="11" TopLine="863"/>
       </Position25>
       <Position26>
-        <Filename Value="osfuncwin.pas"/>
-        <Caret Line="181" Column="16" TopLine="156"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7019" Column="22" TopLine="7008"/>
       </Position26>
       <Position27>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8618" Column="96" TopLine="8599"/>
+        <Caret Line="840" Column="19" TopLine="835"/>
       </Position27>
       <Position28>
         <Filename Value="osparser.pas"/>
-        <Caret Line="19119" Column="28" TopLine="19095"/>
+        <Caret Line="837" Column="3" TopLine="829"/>
       </Position28>
       <Position29>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14068" Column="29" TopLine="14050"/>
+        <Caret Line="840" Column="10" TopLine="829"/>
       </Position29>
       <Position30>
         <Filename Value="osparser.pas"/>
-        <Caret Line="14136" Column="13" TopLine="14095"/>
+        <Caret Line="1014" Column="10" TopLine="1000"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
